--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,11 @@
     "@clerk/clerk-react": "^5.31.9",
     "@clerk/nextjs": "^6.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@liveblocks/client": "^2.24.3",
+    "@liveblocks/node": "^2.24.3",
+    "@liveblocks/react": "^2.24.3",
+    "@liveblocks/react-tiptap": "^2.24.3",
+    "@liveblocks/react-ui": "^2.24.3",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -41,6 +46,8 @@
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@tiptap/extension-code": "^2.11.5",
+    "@tiptap/extension-collaboration": "^2.14.0",
+    "@tiptap/extension-collaboration-cursor": "^2.14.0",
     "@tiptap/extension-color": "^2.11.5",
     "@tiptap/extension-font-family": "^2.11.3",
     "@tiptap/extension-heading": "^2.11.3",
@@ -57,8 +64,8 @@
     "@tiptap/extension-text-style": "^2.11.5",
     "@tiptap/extension-underline": "^2.11.3",
     "@tiptap/pm": "^2.11.3",
-    "@tiptap/react": "^2.11.3",
-    "@tiptap/starter-kit": "^2.11.3",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@types/react-color": "^3.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -84,6 +91,7 @@
     "tailwindcss-animate": "^1.0.7",
     "tiptap-extension-resize-image": "^1.2.1",
     "vaul": "^1.1.2",
+    "y-protocols": "^1.0.6",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
