--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.31.9",
     "@clerk/nextjs": "^6.21.0",
+    "@clerk/themes": "^2.2.50",
     "@hookform/resolvers": "^3.10.0",
     "@liveblocks/client": "^2.24.3",
     "@liveblocks/node": "^2.24.3",
@@ -76,7 +77,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
-    "next-themes": "^0.4.4",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
