--- a/client/package.json
+++ b/client/package.json
@@ -68,15 +68,19 @@
     "@tiptap/react": "^2.14.0",
     "@tiptap/starter-kit": "^2.14.0",
     "@types/react-color": "^3.0.13",
+    "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "convex": "^1.24.6",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "i18next": "^25.2.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-i18next": "^15.4.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "react": "^19.0.0",
@@ -84,6 +88,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.5.3",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.0",
