--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.9",
+    "@clerk/localizations": "^3.16.5",
     "@clerk/nextjs": "^6.21.0",
     "@clerk/themes": "^2.2.50",
     "@hookform/resolvers": "^3.10.0",
